--- a/src/Common/style/Navbar.css
+++ b/src/Common/style/Navbar.css
@@ -21,3 +21,7 @@
 .Search_Button {
   @apply bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded;
 }
+
+.Add_Button {
+  @apply bg-green-500 hover:bg-green-400 text-white font-bold py-2 px-4 border-b-4 border-green-700 hover:border-green-500 rounded cursor-pointer;
+}
